--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <div class="icones">
             <a  href="https://github.com/RodriguesCarlos01"><ion-icon name="logo-github"></ion-icon></a>
-            <a  href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile"><ion-icon name="logo-linkedin"></ion-icon></a>
+            <a  href="https://www.linkedin.com/in/carlos-rodrigus1984/"><ion-icon name="logo-linkedin"></ion-icon></a>
             <a  href="https://www.instagram.com/0carlos012/"><ion-icon name="logo-instagram"></ion-icon></a>
         </div>
         
